--- a/internship.html
+++ b/internship.html
@@ -41,15 +41,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://computing.llnl.gov/careers/internships/intern-hiring-process'>Careers: Internship Program | Intern Hiring Process | Computing</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6IaVfwD&k=Job&j=o2btbfwB&__jvst=Employee&__jvsd=s5wvPhwH&__jvsc=Twitter&bid=nx5PqMw8'>SpartanNash Careers - Culinary Fresh Merchandising Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/rdi/jobs/spring-summer-2020-web-dev-intern-angular-c-typescript-cD8fQA--ur6Ax7aKjNoogA'>[Spring + Summer 2020] Web Dev Intern (Angular/C#/Typescript) #0134 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/rdi/jobs/spring-summer-2020-web-dev-intern-angular-c-typescript-cD8fQA--ur6Ax7aKjNoogA'>[Spring + Summer 2020] Web Dev Intern (Angular/C#/Typescript) #0134 job at R&amp;D Industries, Inc. in Ames, IA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluecore/3ffe119b-0318-49e5-a2d3-237563aa3357'>Bluecore - Software Engineer Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/bluecore/3ffe119b-0318-49e5-a2d3-237563aa3357'>Bluecore - Software Engineer Intern</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -97,7 +101,7 @@
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/studio71us/86052e08-da19-4152-94c8-d06d1beab097'>Studio71 - Gaming, Talent Partnerships Internship Winter 2020 - Los Angeles</a></h5> 
+<h5><a href='https://jobs.lever.co/studio71us/86052e08-da19-4152-94c8-d06d1beab097'>Studio71 - Gaming, Talent Partnerships Internship Winter 2020 - Los Angeles</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles  Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -157,7 +161,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.everythingbenefits.com/careers/internships?utm_content=104669694&utm_medium=social&utm_source=twitter&hss_channel=tw-3880937247'>Internship Opportunities at EverythingBenefits</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.everythingbenefits.com/careers/internships?utm_content=104669694&utm_medium=social&utm_source=twitter&hss_channel=tw-3880937247'>Internship Opportunities at EverythingBenefits</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -175,7 +179,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1921871'>Job Application for Product Management Intern - Platform at Bandwidth</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1921871'>Job Application for Product Management Intern - Platform at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -195,7 +199,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698641188-intern-legales-compliance'>Biogen Intern Legales & Compliance | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698641188-intern-legales-compliance'>Biogen Intern Legales & Compliance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -383,11 +387,11 @@
 <p><span class="badge badge-light">Paris Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/corporate-tax-internship-7172'>Corporate Tax Internship - Florida Blue Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/corporate-tax-internship-7172'>Corporate Tax Internship - Florida Blue Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/research-assistant-intern-12064'>Research Assistant Intern - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/research-assistant-intern-12064'>Research Assistant Intern - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -450,10 +454,6 @@ parallel computing? If so, we want to hear from you. NVIDIA is committed to?...<
 <hr/>
 <h5><a href='https://colorfy.join.com/jobs/473114-project-management-intern-f-m'>Job @ colorfy (Berlin): Project Management Intern ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698621592-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
